--- a/src/pages/activities/style.css
+++ b/src/pages/activities/style.css
@@ -106,11 +106,9 @@ li{
 }
 
 #modal {
-    padding: 40px 40px;
+    padding: 20px 20px;
     width: 60%;
     width: fit-content;
-    /* min-width: 300px;
-    max-width: 800px; */
     background-color: #EDE8F5;
     position: absolute;
     left: 50%;
@@ -163,30 +161,45 @@ input{
 
 .inputContainer{
     display: flex;
-    width: 500px;
-    min-width: 240px;
+    width: 90%;
+    max-width: 500px;
     margin: 5px;
     background-color: #ffff;
+    filter: drop-shadow(0 0 0.3rem rgb(0, 0, 0, 0.3));
     gap:5px;
     align-items: center;
     padding: 5px;
 }
 
-
-#inputs{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
 #textareaDescription{
     margin: 5px;
-    width: 500px;
+    width: 90%;
+    max-width: 500px;
     resize: vertical;
     height: 100px;
     max-height: 300px;
     padding: 5px;
 }
+
+#containerActivities {
+    padding: 50px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    align-items: center;
+    justify-content: center;
+}
+
+
+#inputs{
+    max-width: 500px;
+    gap: 5px;
+    width: 75vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 
 #buttonEditActivity{
     font-size: 1.25rem;
