--- a/src/pages/create/style.css
+++ b/src/pages/create/style.css
@@ -8,27 +8,6 @@ body{
     font-family: "Rubik";
 }
 
-nav{
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    position: fixed;
-    display: flex;
-    padding: 10px;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-    background-color: #202020;
-    left:0px;
-    height: 100%;
-    width: fit-content;
-    color: white;
-    & div > span {
-        display: none;
-    }
-    z-index: 1;
-}
-
 h1{
     margin: 0px;
     font-weight: 500;
@@ -159,25 +138,6 @@ input{
 }
 
 @media (max-width: 500px){
-    nav{
-        -webkit-box-sizing: border-box;
-        -moz-box-sizing: border-box;
-        position: fixed;
-        box-sizing: border-box;
-        display: flex;
-        padding: 10px;
-        flex-direction: row;
-        align-items: center;
-        gap: 20px;
-        background-color: #202020;
-        left:0px;
-        height: fit-content;
-        width: 100%;
-        color: white;
-        & div > span {
-            display: none;
-        }
-    }
 
     h1{
         font-size: 1.7rem;
@@ -187,130 +147,15 @@ input{
         padding: 50px 0px;
     }
 
-    #exitContainer{
-        position: absolute;
-        right: 10px;
-    }
-
-    #buttonCreate:hover:after{
-        border-radius: 5px;
-        position: absolute;
-        padding: 5px 10px;
-        background-color: #4b4949;
-        content: "Criar Atividade";
-        text-align: center;
-        animation: slideDown 0.4s forwards;
-    }
 
     main{
         padding: 0px;
         padding-top: 80px;
     }
 
-    #buttonAvailable:hover:after{
-        border-radius: 5px;
-        position: absolute;
-        padding: 5px 10px;
-        background-color: #4b4949;
-        content: "Disponíveis";
-        animation: slideDown 0.4s forwards;
-    }
-    
-    #buttonParticipating:hover:after{
-        border-radius: 5px;
-        position: absolute;
-        padding: 5px 10px;
-        background-color: #4b4949;
-        content: "Participando";
-        animation: slideDown 0.4s forwards;
-    }
-
-    #exitContainer:hover:after{
-        border-radius: 5px;
-        position: absolute;
-        padding: 5px 10px;
-        transform: translateX(-50px);
-        background-color: #4b4949;
-        content: "Sair";
-        animation: slideDownExit 0.4s forwards;
-    }
-
-    @keyframes slideDown {
-        0% {
-            top:40px;
-        }
-        100% {
-            top:80px;
-        }
-    }
-
-    @keyframes slideDownExit {
-        0% {
-            top:40px;
-        }
-        100% {
-            top:60px;
-        }
+    #inputDate{
+        font-size: 12px;
     }
 
 }
 
-@media (min-width: 500px){
-    #buttonAvailable:hover:after{
-        border-radius: 5px;
-        position: absolute;
-        padding: 5px 10px;
-        background-color: #4b4949;
-        transform: translateY(-33px);
-        content: "Disponíveis";
-        animation: slideLeft 0.4s forwards;
-    }
-    
-    #buttonParticipating:hover:after{
-        border-radius: 5px;
-        position: absolute;
-        padding: 5px 10px;
-        background-color: #4b4949;
-        transform: translateY(-33px);
-        content: "Participando";
-        animation: slideLeft 0.4s forwards;
-    }
-
-    #buttonCreate:hover:after{
-        border-radius: 5px;
-        position: absolute;
-        padding: 5px 10px;
-        background-color: #4b4949;
-        transform: translateY(-33px);
-        content: "Criar Atividade";
-        text-align: center;
-        animation: slideLeft 0.4s forwards;
-    }
-
-    #exitContainer{
-        position: absolute;
-        bottom:0;
-        width: 100%;
-        background-color: #7091E6;
-        padding: 10px 0px;
-        text-align: center;
-    }
-
-    #exitContainer:hover:after{
-        border-radius: 5px;
-        position: absolute;
-        padding: 5px 10px;
-        background-color: #4b4949;
-        content: "Sair";
-        animation: slideLeft 0.4s forwards;
-    }
-
-    @keyframes slideLeft {
-        0% {
-            left: 60px; 
-        }
-        100% {
-            left: 80px; 
-        }
-    }
-}
